# dagpi-cli

./: .gitignore  Cargo.toml  README.md
.github/: ci.yml
.github/workflows/: binaries.yml
Formula/: dagpi.rb
src/: main.rs
src/commands/: app.rs  credentials.rs  login.rs  mod.rs  reset_token.rs  status.rs  token.rs  update.rs
src/models/: api_key.rs  app.rs  emoji.rs  mod.rs  tokens.rs
src/utils/: browser.rs  build_url.rs  confirm.rs  http.rs  load_config.rs  macros.rs  mod.rs
