[package]
name = "dagpi"
version = "0.3.4"
description="A cli for https://dagpi.xyz"
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
clap="2.33.3"
dirs="3.0.2"
console="0.14.1"
anyhow="1.0.40"
hyper = { version = "0.14", features=["full"] }
pretty_env_logger = "0.4.0"
serde = {version="1.0.126", features=["derive"]}
serde_json = "1.0.64"
toml = "0.5.8"
tokio = { version = "1" }
self_update = { version = "0.27.0", features=["rustls", "archive-zip", "archive-tar"], default-features=false }
indicatif = "0.16.2"
ureq = {version="2.1.1", features=["json"] }
comfy-table = "2.1.0"



[features]
auto_updates = []

[profile.release]
panic = "abort"

[[bin]]
name = "dagpi"
